kubernetes/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      name: wisecow-pod
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: virajdalave/wisecow:cb3fa41f652e24820af46ddcf4c3352abcb50ac6
        ports:
        - containerPort: 4499
