kubernetes/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 4499
    nodePort: 30000
  selector:
    app: wisecow
